--- a/TimeServed/Views/Auditors/Hours.cshtml
+++ b/TimeServed/Views/Auditors/Hours.cshtml
@@ -41,7 +41,7 @@
                     <td class="totalHours">
                         @(Math.Round(totalTime.TotalHours * 4, MidpointRounding.ToEven) / 4)
                     </td>
-                        @foreach (var item2 in Model.appointments.Where(a => a.ApplicationUserId == item.Id && a.VisitDate.Month == DateTime.Now.Month))
+                        @foreach (var item2 in Model.appointments.Where(a => a.ApplicationUserId == item.Id && a.VisitDateStart.Month == DateTime.Now.Month))
                         {
                             monthlyTime = monthlyTime + item2.TimeSpent();
                         }
