--- a/TimeServed/Views/Attorneys/Edit.cshtml
+++ b/TimeServed/Views/Attorneys/Edit.cshtml
@@ -18,9 +18,9 @@
                 <span asp-validation-for="ClientId" class="text-danger"></span>
             </div>
             <div class="form-group" hidden>
-                <label asp-for="VisitDate" class="control-label"></label>
-                <input asp-for="VisitDate" class="form-control" hidden />
-                <span asp-validation-for="VisitDate" class="text-danger"></span>
+                <label asp-for="VisitDateStart" class="control-label"></label>
+                <input asp-for="VisitDateStart" class="form-control" hidden />
+                <span asp-validation-for="VisitDateStart" class="text-danger"></span>
             </div>
             <div class="form-group" hidden>
                 <label asp-for="CheckIn" class="control-label"></label>
