--- a/TimeServed/Views/Auditors/Delete.cshtml
+++ b/TimeServed/Views/Auditors/Delete.cshtml
@@ -24,10 +24,10 @@
             @Html.DisplayFor(model => model.client.FirstName) @Html.DisplayFor(model => model.client.LastName)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.VisitDate)
+            @Html.DisplayNameFor(model => model.VisitDateStart)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.VisitDate)
+            @Html.DisplayFor(model => model.VisitDateStart)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.CheckIn)
