--- a/TimeServed/Views/Guards/Delete.cshtml
+++ b/TimeServed/Views/Guards/Delete.cshtml
@@ -6,7 +6,7 @@
 
 <h1>Delete</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Are you sure you want to remove this inmate from the database? Only remove after inmate release!</h3>
 <div>
     <h4>Client</h4>
     <hr />
