--- a/TimeServed/Views/Visitor/Delete.cshtml
+++ b/TimeServed/Views/Visitor/Delete.cshtml
@@ -23,10 +23,10 @@
             @Html.DisplayFor(model => model.client.location.LocationName)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.VisitDate)
+            @Html.DisplayNameFor(model => model.VisitDateStart)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.VisitDate)
+            @Html.DisplayFor(model => model.VisitDateStart)
         </dd>
 
     </dl>
