--- a/TimeServed/Views/Visitor/Details.cshtml
+++ b/TimeServed/Views/Visitor/Details.cshtml
@@ -11,22 +11,16 @@
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
-            Attorney
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.applicationUser.FirstName) @Html.DisplayFor(model => model.applicationUser.LastName)
-        </dd>
-        <dt class="col-sm-2">
-            Client
+            Inmate
         </dt>
         <dd class="col-sm-10">
          @Html.DisplayFor(model => model.client.FirstName) @Html.DisplayFor(model => model.client.LastName)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.VisitDate)
+            @Html.DisplayNameFor(model => model.VisitDateStart)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.VisitDate)
+            @Html.DisplayFor(model => model.VisitDateStart)
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.CheckIn)
