--- a/TimeServed/Views/Attorneys/Delete.cshtml
+++ b/TimeServed/Views/Attorneys/Delete.cshtml
@@ -8,7 +8,7 @@
 <h3>Are you sure you want to cancel this appointment?</h3>
 
 <hr />
-<div>
+<div class="card" style="width: 30vw; margin: auto">
     <dl class="row card">
         <dt class="col-sm-2">
             Client
