--- a/TimeServed/Areas/Identity/Pages/Account/Login.cshtml
+++ b/TimeServed/Areas/Identity/Pages/Account/Login.cshtml
@@ -6,12 +6,11 @@
 }
 
 
-    <div class="justify-content-center" style="margin: auto; width: 25vw; margin-top: 2rem">
-        <h1>@ViewData["Title"]</h1>
+    <div class="justify-content-center" style="margin: auto; width: 25vw; margin-top: 4rem">
+        <img src="~/favicon.png" style="height: 10vh; ">
        
             <section>
                 <form id="account" method="post">
-                    <h4>Use a local account to log in.</h4>
                     <hr />
                     <div asp-validation-summary="All" class="text-danger"></div>
                     <div class="form-group">
