--- a/TimeServed/Views/Attorneys/Create.cshtml
+++ b/TimeServed/Views/Attorneys/Create.cshtml
@@ -6,7 +6,7 @@
     <h1 class="text-center" style="margin-top:5vh;">Book an appointment</h1>
 
     <br />
-    <div class="card" style="width: 40vw; margin: auto">
+    <div class="card" style="width: 30vw; margin: auto">
         <div class="card-body">
             <form asp-action="Create">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
@@ -40,14 +40,14 @@
                     <input asp-for="appointment.Notes" class="form-control" />
                     <span asp-validation-for="appointment.Notes" class="text-danger"></span>
                 </div>
-                <div class="form-group text-center" style="margin-top: 5vh">
+                <div class="form-group text-center" style="margin-top: 1vh">
                     <input type="submit" value="Create" class="btn btn-primary" />
                 </div>
             </form>
         </div>
     </div>
 
-    <div class="text-center">
+    <div class="text-center" style="margin-top:1rem">
         <a asp-action="Index">See all of your appointments</a>
     </div>
 
