--- a/TimeServed/Views/Attorneys/Previous.cshtml
+++ b/TimeServed/Views/Attorneys/Previous.cshtml
@@ -4,18 +4,12 @@
     ViewData["Title"] = "Previous";
 }
 
-@*<head>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.6.0/Chart.min.js" type="text/javascript"></script>
-    <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
-</head>*@
 <body>
     <h1 class="text-center" style="margin-top: 5vh; margin-bottom: 5vh">Previous appointments</h1>
     <table class="table table-bordered">
         <thead class="thead-light">
             <tr>
-                <th>
-                    @Html.DisplayNameFor(model => model.VisitDateStart)
-                </th>
+             
                 <th>
                     @Html.DisplayNameFor(model => model.CheckIn)
                 </th>
@@ -26,7 +20,7 @@
                     @Html.DisplayNameFor(model => model.client)
                 </th>
                 <th>
-                    Time Spent(h/m/s)
+                    Time Spent (hours)
                 </th>
             </tr>
         </thead>
@@ -36,9 +30,7 @@
                 if (item.CheckOut != null)
                 {
                     <tr>
-                        <td class="visitDate">
-                            @item.VisitDateStart.Date
-                        </td>
+                      
                         <td>
                             @Html.DisplayFor(modelItem => item.CheckIn)
                         </td>
@@ -56,51 +48,6 @@
             }
         </tbody>
     </table>
-    @*<div Style="font-family: Corbel; font-size: large ;  text-align:center; " class="row">
-        <div style="width:100%;height:100%; padding-top: 2rem; ">
-            <canvas id="myChart2" style="padding: 0;margin: auto;display: block; background-color: #abb6c2; border: 3px solid #4E5D6C; font-weight: bold;"> </canvas>
-        </div>
-    </div>*@
+  
 </body>
-@*<script>
-       
-        var appointmentArray = document.getElementsByClassName("visitDate");
-        var hours = document.getElementsByClassName("appointmentTime");
-        var blarg2 = []
-        for (i = 0; i < hours.length; i++) {
-            blarg2.push(hours[i].textContent);
-    }
-       var blarg3 = []
-        for (i = 0; i < appointmentArray.length; i++) {
-            blarg3.push(appointmentArray[i].textContent);
-}
-
-    var dataT = {
-            labels: appointmentArray,
-            datasets: [{
-                label: blarg3,
-                data: blarg2,
-                fill: false,
-                backgroundColor: ["#DF691A", "#2B3E50", "#316135", "#663d3d", "#786372"],
-                borderColor: ["#DF691A", "#2B3E50", "#316135", "#663d3d", "#786372"],
-                borderWidth: 1
-                }]
-            };
-        var ctx = $("#myChart2").get(0).getContext("2d");
-
-    var myNewChart = new Chart(ctx, {
-            type: 'bar',
-            data: dataT,
-            options: {
-                responsive: true,
-                title: { text: 'Date' },
-                legend: { postion: 'bottom' },
-                scales: {
-                xAxes: [{ gridLines: { display: false }, display: true, scaleLabel: { display: false, labelString: '' } }],
-                yAxes: [{ gridLines: { display: false }, display: true, scaleLabel: { display: true, labelString: 'Attorney Hours' }, ticks: { stepSize: 10, beginAtZero: true } }]
-            },
-        }
-        });
-
-</script>*@
 
