--- a/TimeServed/Views/Home/About.cshtml
+++ b/TimeServed/Views/Home/About.cshtml
@@ -2,17 +2,17 @@
 @{
     ViewData["Title"] = "About";
 }
-    <h1 class="display-4 text-center" style="margin-top:5vh">About TimeServed</h1>
+    <h1 class="display-4 text-center" style="margin-top:15vh; font: bolder; color: #004e9b">About <img src="~/favicon.png" style="height: 15vh; "></h1>
 
-<div class="align-content-center" style="width:50vw; margin: auto;">
+<div class="align-content-center" style="width:50vw; margin: auto; font: 18px molot">
     
-    <p style="margin-top:5vh;"> TimeServed is, at its core, a way for public defenders to easily book appointments with clients and keep track of their appointment hours using the following process:</p>
+    <p style="margin-top:5vh;"> TimeServed is, at its core, a way for public defenders and other visitors to easily book appointments with inmates and keep track of their appointment hours using the following process:</p>
     <ul>
-        <li>An attorney can register an account on the platform</li>
-        <li>From there, an attorney can book an appointment with a client</li>
-        <li>A guard at the physical site will see all upcoming appointments, and bring the client into holding on the specified time</li>
-        <li>Attorney arrives for meeting and clicks check-in for that appointment</li>
-        <li>When the meeting is finished, the attorney then clicks check-out, and the time the meeting took is recorded</li>
+        <li>A user can register an account on the platform</li>
+        <li>From there, an user can book an appointment with an inmate</li>
+        <li>A guard at the physical site will see all upcoming appointments, and bring the inmate into holding on the specified time</li>
+        <li>User arrives for meeting and clicks check-in for that appointment</li>
+        <li>When the meeting is finished, the user then clicks check-out, and the time the meeting took is recorded</li>
     </ul>
 </div>
 
