--- a/TimeServed/Views/Visitor/Create.cshtml
+++ b/TimeServed/Views/Visitor/Create.cshtml
@@ -6,7 +6,7 @@
     <h1 class="text-center" style="margin-top:5vh;">Book an appointment</h1>
 
     <br />
-    <div class="card" style="height: 40vh; width: 40vw; margin: auto">
+    <div class="card" style="height: 60vh; width: 40vw; margin: auto">
         <div class="card-body">
             <form asp-action="Create">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
@@ -22,8 +22,13 @@
                 </div>
                 <div class="form-group">
                     <label asp-for="appointment.VisitDateEnd" class="control-label"></label>
-                    <input asp-for="appointment.VisitDateEnd" class="form-control" />
+                    <select asp-for="selected" class="form-control" asp-items="@Model.Times"></select>
                     <span asp-validation-for="appointment.VisitDateEnd" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="appointment.Purpose" class="control-label"></label>
+                    <input asp-for="appointment.Purpose" class="form-control" />
+                    <span asp-validation-for="appointment.Purpose" class="text-danger"></span>
                 </div>
                 <div class="form-group text-center" style="margin-top: 5vh">
                     <input type="submit" value="Create" class="btn btn-primary" />
