--- a/TimeServed/Views/Visitor/Delete.cshtml
+++ b/TimeServed/Views/Visitor/Delete.cshtml
@@ -5,38 +5,38 @@
 }
 
 
-<h3>Are you sure you want to cancel this appointment?</h3>
+<h3 class="text-center">Are you sure you want to cancel this appointment?</h3>
 
 <hr />
-<div>
-    <dl class="row card">
-        <dt class="col-sm-2">
+<div class="card" style="width: 30vw; margin: auto">
+    <dl class="text-center" style="margin-top:3vh">
+        <dt class="">
             Client
         </dt>
-        <dd class="col-sm-10">
+        <dd class="">
             @Html.DisplayFor(model => model.client.FirstName) @Html.DisplayFor(model => model.client.LastName)
         </dd>
-        <dt class="col-sm-2">
+        <dt class="">
             @Html.DisplayNameFor(model => model.client.location)
         </dt>
-        <dd class="col-sm-10">
+        <dd class="">
             @Html.DisplayFor(model => model.client.location.LocationName)
         </dd>
-        <dt class="col-sm-2">
+        <dt class="">
             @Html.DisplayNameFor(model => model.VisitDateStart)
         </dt>
-        <dd class="col-sm-10">
+        <dd class="">
             @Html.DisplayFor(model => model.VisitDateStart)
         </dd>
 
     </dl>
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Cancel" class="btn btn-danger" />
-
-    </form>
-
     <br />
-
 </div>
-<a asp-action="Index">Back to appointments</a>
+<form asp-action="Delete" class="text-center" style="margin-top:3vh">
+    <input type="hidden" asp-for="Id" />
+    <input type="submit" value="Cancel" class="btn btn-danger" />
+
+</form>
+<div class="text-center" style="margin-top:3vh">
+    <a asp-action="Index">See all of your appointments</a>
+</div>
