more style changes

--- a/TimeServed/Views/Home/Index.cshtml
+++ b/TimeServed/Views/Home/Index.cshtml
@@ -14,7 +14,7 @@ else if (User.Identity.IsAuthenticated && User.IsInRole("Attorney"))
 
     <div class="text-center" style="height:50vh; margin-top:25vh;">
 
-        <h1>Welcome to <img src="~/favicon.png" style="height: 10vh; margin-top:3vh"></h1>
+        <h1 style="color: #004e9b; font-size:50px; font-family:molot">Welcome to <img src="~/favicon.png" style="height: 15vh;"></h1>
 
 
         <p style="margin-top:5vh">To book a new appointment or cancel an upcoming appointment, click upcoming.</p>
@@ -25,7 +25,7 @@ else if (User.Identity.IsAuthenticated && User.IsInRole("Guard"))
 {
 
     <div class="text-center" style="height:50vh; margin-top:25vh;">
-        <h1>Welcome to <img src="~/favicon.png" style="height: 10vh; margin-top:3vh"></h1>
+        <h1 style="color: #004e9b; font-size:50px; font-family:molot">Welcome to <img src="~/favicon.png" style="height: 15vh;"></h1>
 
         <p style="margin-top:5vh">To add an inmate to the system, or see a list of all inmates, click inmate.</p>
         <p>To see upcoming attorney appointments, click appointments.</p>
@@ -35,7 +35,7 @@ else if (User.Identity.IsAuthenticated && User.IsInRole("Visitor"))
 {
 
 <div class="text-center" style="height:50vh; margin-top:25vh;">
-    <h1>Welcome to <img src="~/favicon.png" style="height: 10vh; margin-top:3vh"></h1>
+    <h1 style="color: #004e9b; font-size:50px; font-family:molot">Welcome to <img src="~/favicon.png" style="height: 15vh;"></h1>
 
     <p style="margin-top:5vh">To book a new appointment or cancel an upcoming appointment, click upcoming.</p>
     <p>To see your completed appointments or your hours logged, click completed.</p>
@@ -45,7 +45,7 @@ else if (User.Identity.IsAuthenticated && User.IsInRole("Auditor"))
 {
 
     <div class="text-center" style="height:50vh; margin-top:25vh;">
-        <h1>Welcome to <img src="~/favicon.png" style="height: 15vh; margin-top:3vh"></h1>
+        <h1 style="color: #004e9b; font-size:50px; font-family:molot">Welcome to <img src="~/favicon.png" style="height: 15vh; "></h1>
         <p class="mt-2" style="margin-top:5vh">To see a list of all appointments or search for specific appointments by location, click home.</p>
         <p>To see upcoming attorney appointments, click appointments.</p>
     </div>
@@ -54,7 +54,7 @@ else if (User.Identity.IsAuthenticated && User.IsInRole("Admin"))
 {
 
     <div class="text-center" style="height:50vh; margin-top:25vh;">
-        <h1>Welcome to <img src="~/favicon.png" style="height: 10vh; margin-top:3vh"></h1>
+        <h1 style="color: #004e9b; font-size:50px; font-family:molot">Welcome to <img src="~/favicon.png" style="height: 15vh;"></h1>
 
 
         <p class="mt-2" style="margin-top:5vh"></p>
