--- a/TimeServed/Views/Guards/Appointments.cshtml
+++ b/TimeServed/Views/Guards/Appointments.cshtml
@@ -19,18 +19,18 @@
                 @Html.DisplayNameFor(model => model.client.location)
             </th>
             <th>
-                Attorney
+                User
             </th>
         </tr>
     </thead>
     <tbody class="table-active">
 @foreach (var item in Model)
 {
-    if (item.VisitDateStart.Date == DateTime.Today)
+    if (item.VisitDateStart.Date >= DateTime.Today)
     {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.VisitDateStart.TimeOfDay)
+                @Html.DisplayFor(modelItem => item.VisitDateStart)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.client.FirstName)  @Html.DisplayFor(modelItem => item.client.LastName)
