--- a/TimeServed/Views/Guards/Delete.cshtml
+++ b/TimeServed/Views/Guards/Delete.cshtml
@@ -4,42 +4,49 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
 
-<h3>Are you sure you want to remove this inmate from the database? Only remove after inmate release!</h3>
-<div>
-    <h4>Client</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
+
+<h3 class="text-center">Are you sure you want to remove this inmate from the database?</h3>
+
+<hr />
+<div class="card" style="width: 30vw; margin: auto">
+    <dl class="text-center" style="margin-top:3vh">
+        <dt class="">
             @Html.DisplayNameFor(model => model.FirstName)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="">
             @Html.DisplayFor(model => model.FirstName)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="">
             @Html.DisplayNameFor(model => model.LastName)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="">
             @Html.DisplayFor(model => model.LastName)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="">
             @Html.DisplayNameFor(model => model.location)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="">
             @Html.DisplayFor(model => model.location.LocationName)
-        </dd class>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.applicationUser)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.applicationUser.Id)
-        </dd class>
+        </dd>
+        @if (Model.ApplicationUserId != null)
+        {
+            <dt class="">
+                @Html.DisplayNameFor(model => model.applicationUser)
+            </dt>
+            <dd class="">
+                @Html.DisplayFor(model => model.applicationUser.FirstName) @Html.DisplayFor(model => model.applicationUser.LastName)
+            </dd>
+        }
     </dl>
-    
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
-    </form>
 </div>
+<form asp-action="Delete" class="text-center" style="margin-top:3vh">
+    <input type="hidden" asp-for="Id" />
+    <input type="submit" value="Release" class="btn btn-danger" />
+
+</form>
+<div class="text-center" style="margin-top:3vh">
+    <a asp-action="Index">Go back to inmate view</a>
+</div>
+
+
