--- a/TimeServed/Views/Guards/Details.cshtml
+++ b/TimeServed/Views/Guards/Details.cshtml
@@ -4,40 +4,40 @@
     ViewData["Title"] = "Details";
 }
 
-    <h1>@Html.DisplayFor(model => model.FirstName) @Html.DisplayFor(model => model.LastName)</h1>
+<h1 class="text-center">@Html.DisplayFor(model => model.FirstName) @Html.DisplayFor(model => model.LastName)</h1>
 
-<div>
-    <hr />
-    <dl class="card">
-        <dt class="col-sm-2">
+<hr />
+<div class="card" style="width: 30vw; margin: auto">
+    <dl class="text-center" style="margin-top:3vh">
+        <dt class="">
             @Html.DisplayNameFor(model => model.location.LocationName)
         </dt>
-        <dd class="col-sm-10">
+        <dd class="">
             @Html.DisplayFor(model => model.location.LocationName)
         </dd>
-        <dt class="col-sm-2">
+        <dt class="">
             @Html.DisplayNameFor(model => model.location.StreetAddress)
         </dt>
-        <dd class="col-sm-10">
+        <dd class="">
             @Html.DisplayFor(model => model.location.StreetAddress)
         </dd>
-        <dt class="col-sm-2">
+        <dt class="">
             @Html.DisplayNameFor(model => model.applicationUser)
         </dt>
         @if (Model.ApplicationUserId != null)
         {
-            <dd class="col-sm-10">
+            <dd class="">
                 @Html.DisplayFor(model => model.applicationUser.FirstName) @Html.DisplayFor(model => model.applicationUser.LastName)
             </dd>
         }
         else
         {
-            <dd class="col-sm-10">
-               No attorney
+            <dd class="">
+                No attorney assigned
             </dd>
         }
     </dl>
 </div>
-<div>
+<div class="text-center">
     <a asp-action="Index">See all inmates</a>
 </div>
